<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<LinearLayout
            android:id="@+id/belka2"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="?attr/Belka_kolor"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/title_activity_podglad"
                android:textColor="@color/bialy"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/button1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="#00ffffff"
                android:contentDescription="@string/app_name"
                android:onClick="btn_out"
                android:padding="5dp"
                android:scaleType="center"
                android:src="@drawable/button_anuluj_png"
                android:textSize="24sp" />

        </LinearLayout>

<ScrollView
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/no_notes"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>
    
</LinearLayout>