<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/belka2"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="?attr/Belka_kolor"
            android:orientation="horizontal" >

<TextView
    android:id="@+id/textView17"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_gravity="center_vertical"
    android:clickable="true"
    android:onClick="off"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:text="@string/cofanie_ikona"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textColor="@color/bialy"
    android:textSize="36sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:onClick="off"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/title_activity_edit"
                android:textColor="@color/bialy"
                android:textSize="18sp" />

            <View 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

            <ImageButton
                android:id="@+id/button1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right|center_vertical"
                android:background="#00ffffff"
                android:contentDescription="@string/zapisz"
                android:onClick="btn_out"
                android:padding="5dp"
                android:scaleType="center"
                android:src="@drawable/button_anuluj_png"
                android:textSize="24sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:ellipsize="middle"
            android:fadingEdge="horizontal"
            android:fadingEdgeLength="60dp"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="10dp"
            android:scrollbars="vertical"
            android:typeface="normal" />

    </LinearLayout>

